--- a/PhotoVerseESP32/platformio.ini
+++ b/PhotoVerseESP32/platformio.ini
@@ -13,4 +13,5 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_port = /dev/cu.wchusbserial14210
-li
+lib_deps =
+    LiquidCrystal_I2C_ESP32@1.1.6
